--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "0.9.0",
-    "webpack": "^2.2.0",
+    "webpack": "1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
